IOExecutor may use VirtualThread